# rnk

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN_ISSUES.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md  spec_request.md
.github/scripts/: check_markdown_links.py  crates_io_release.py
.github/workflows/: ci.yml  quality.yml  release.yml
benches/: hooks.rs  layout.rs  render.rs  unicode.rs
crates/rnk-icons/: Cargo.toml  README.md
crates/rnk-icons/src/: icon.rs  lib.rs
crates/rnk-icons/src/icons/: dev.rs  file.rs  git.rs  misc.rs  mod.rs  ui.rs  weather.rs
crates/rnk-style/: Cargo.toml  README.md
crates/rnk-style-core/: Cargo.toml  README.md
crates/rnk-style-core/src/: border.rs  color.rs  lib.rs
crates/rnk-style/src/: border.rs  color.rs  lib.rs  render.rs  style.rs
docs/: API_STABILITY.md  COMPARISON.md  CORE_COMPONENT_CONTRACTS.md  DESIGN_TOKENS_AND_VARIANTS.md  FOCUS_ACCESSIBILITY_INPUT.md  INTERACTIVE_COMPONENT_CONTRACTS.md  RELEASING.md  RNK_MATURITY_SPEC.md  TERMINAL_COMPATIBILITY.md  getting-started.md
docs/todo/: FEATURE_ROADMAP.md  TERMINAL_UI_COMPARISON_AND_BUGS.md
docs/vibe/: design-guard-and-fixflow.md
examples/: README.md  adaptive_colors_demo.rs  aria.rs  chat.rs  claude_inline_input_box.rs  claude_input_box.rs  confirm_demo.rs  crlf_test.rs  cursor_demo.rs  debug.rs  debug_80x24.rs  debug_terminal.rs  exact_app_test.rs  file_picker_demo.rs  fixed_bottom_demo.rs  fullscreen_test.rs  glm_chat.rs  glm_chat_old.rs  gradient_demo.rs  hello.rs  help_demo.rs  hyperlink_demo.rs  incremental_rendering.rs  interactive_demo.rs  jest.rs  keys_demo.rs  layout_demo.rs  macros_demo.rs  multi_select_demo.rs  notification_demo.rs  paginator_demo.rs  paste_demo.rs  rnk_chat.rs  rnk_git.rs  rnk_top.rs  select_demo.rs  select_input.rs  simple_test.rs  spring_demo.rs  static_demo.rs  (+16 more)
examples/glm_chat/: prompt_box.rs
examples/internal/: debug_80x24.rs  debug_terminal.rs
specs/GH47/: product.md  tasks.md  tech.md
specs/GH48/: product.md  tasks.md  tech.md
specs/GH49/: product.md  tasks.md  tech.md
specs/GH50/: product.md  tasks.md  tech.md
src/: error.rs  lib.rs  macros.rs  main.rs  prelude.rs
src/animation/: easing.rs  keyframe.rs  mod.rs  spring.rs
src/cmd/: core.rs  exec.rs  executor.rs  mod.rs  msg.rs  tasks.rs
src/components/: accordion.rs  action.rs  alert.rs  avatar.rs  badge.rs  box_component.rs  calendar.rs  capsule.rs  card.rs  chip.rs  code_editor.rs  color_picker.rs  command_palette.rs  confirm.rs  context_menu.rs  cursor.rs  devtools.rs  divider.rs  empty_state.rs  gradient.rs  help.rs  highlight.rs  hyperlink.rs  interaction.rs  key_hint.rs  keymap.rs  line_chart.rs  link.rs  list.rs  markdown.rs  mod.rs  multi_select.rs  navigation.rs  notification.rs  paginator.rs  popover.rs  quote.rs  rating.rs  select_input.rs  selection_list.rs  (+13 more)
src/core/: color.rs  component.rs  element.rs  mod.rs  style.rs  vnode.rs
src/hooks/: context.rs  deps.rs  lock_utils.rs  mod.rs  paste.rs  use_accessibility.rs  use_animation.rs  use_app.rs  use_async.rs  use_clipboard.rs  use_cmd.rs  use_context.rs  use_counter.rs  use_debounce.rs  use_effect.rs  use_focus.rs  use_form.rs  use_frame_rate.rs  use_history.rs  use_idle.rs  use_input.rs  use_interval.rs  use_keyboard_shortcut.rs  use_layout_effect.rs  use_list.rs  use_local_storage.rs  use_map.rs  use_measure.rs  use_media_query.rs  use_memo.rs  use_mouse.rs  use_online.rs  use_previous.rs  use_reducer.rs  use_ref.rs  use_scroll.rs  use_set.rs  use_signal.rs  use_state.rs  use_toggle.rs  (+3 more)
src/layout/: engine.rs  measure.rs  mod.rs  utils.rs
src/reconciler/: diff.rs  mod.rs  registry.rs
src/renderer/: app.rs  builder.rs  element_renderer.rs  filter.rs  frame_rate.rs  mod.rs  output.rs  pipeline.rs  registry.rs  render_to_string.rs  runtime.rs  runtime_bridge.rs  static_content.rs  terminal.rs  terminal_controller.rs  tree_renderer.rs
src/runtime/: context.rs  context_tests.rs  environment.rs  mod.rs  signal_handler.rs  suspend.rs
src/testing/: assertions.rs  generators.rs  golden.rs  harness.rs  mod.rs  renderer.rs
tests/: cmd_integration_test.rs  core_component_contracts.rs  golden_real_apps.rs  harness_interactions.rs  hook_integration_test.rs  integration_test.rs  layout_alignment_test.rs  local_storage_security_test.rs  prelude_surfaces.rs  property_tests.rs  terminal_mode_test.rs  virtual_screen_diff_test.rs
tests/golden/: real_app_chat.ansi.txt  real_app_chat.txt  real_app_forms.txt  real_app_git.txt  real_app_textarea.txt  real_app_top.txt
(+68 files in other folders)
