[package]
name = "rnk-icons"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Terminal icons library for rnk - Nerd Font icons for TUI applications"
license = "MIT"
repository = "https://github.com/majiayu000/rnk"
homepage = "https://github.com/majiayu000/rnk"
documentation = "https://docs.rs/rnk-icons"
readme = "README.md"
keywords = ["icons", "terminal", "tui", "nerd-fonts"]
categories = ["command-line-interface"]
authors = ["majiayu000 <1835304752@qq.com>"]

[dependencies]
