[package]
name = "rnk-style-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Shared style primitives for rnk crates"
license = "MIT"
repository = "https://github.com/majiayu000/rnk"
homepage = "https://github.com/majiayu000/rnk"
documentation = "https://docs.rs/rnk-style-core"
readme = "README.md"
keywords = ["terminal", "style", "color", "ansi"]
categories = ["command-line-interface", "text-processing"]
authors = ["majiayu000 <1835304752@qq.com>"]

[dependencies]
